In the Get in Touch section, the form: Move labels above input and fix alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -218,16 +218,19 @@ ol li {
     padding-bottom: 10px;
 }
 
+#fname, #lname, #email, #message {
+    width: 280px; 
+}
+
  #fname, #lname, #email {
-    width: 250px;
     height: 30px;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
+    margin-top: 10px;
     border-radius: 3px;
     border: 1px solid #9c6813;
  }
 
 #message {
-    width: 280px;
     height: 200px;
     border-radius: 3px;
     border: 1px solid #9c6813;
@@ -364,18 +367,11 @@ footer {
      line-height: 75px;
      font-size: 1.8em;
     }
-
     #contact_form {
         margin-left: 20px;
     }
-    #fname, #lname {
-        width: 400px; 
-    }
-    #email {
-        width: 365px;
-    }
-    #message {
-        width: 500px;
+    #fname, #lname, #email, #message {
+        width: 500px; 
     }
     .footer_icons i {
         font-size: 1.2em;
